--- a/css/style.css
+++ b/css/style.css
@@ -96,12 +96,14 @@ color: #FFFFFF;
 }
 
 .button1 {
+    cursor: pointer;
     background: #2196F3;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 }
 
 .button2 {
+    cursor: pointer;
     background: #F5F4FA;
 border-radius: 4px;
 }
