--- a/css/style.css
+++ b/css/style.css
@@ -96,15 +96,26 @@ color: #FFFFFF;
 }
 
 .button1 {
-    cursor: pointer;
-    background: #2196F3;
+    color: #FFFFFF;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 16px;
+line-height: 30px;
+cursor: pointer;
+background: #2196F3;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 }
 
 .button2 {
-    cursor: pointer;
-    background: #F5F4FA;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 26px;
+cursor: pointer;
+background: #F5F4FA;
 border-radius: 4px;
 }
 
