--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,22 @@
 body {
     color: #212121;
     background-color: #e5e5ee;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto;
 }
 
-   a {
+a {
     text-decoration: none;
    }
 
-   ul { list-style: none; }
-
-
+ul { list-style: none; }
 
 .logo-link {
     font-family: Raleway;
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
-line-height: 31px;
-
+line-height: 1.2;
 letter-spacing: 0.03em;
-
 color: #2196F3;
 }
 
@@ -29,8 +25,7 @@ color: #2196F3;
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
-line-height: 31px;
-
+line-height: 1.2;
 letter-spacing: 0.03em;
 
 color: #212121;
@@ -41,32 +36,28 @@ color: #212121;
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
-line-height: 31px;
-
+line-height: 1.2;
 letter-spacing: 0.03em;
-
 color: #FFFFFF;
 }
 
 .link-inline {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.1;
 letter-spacing: 0.02em;
-
 color: #212121;
 }
 
 .link-inline2 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.1;
 letter-spacing: 0.02em;
-
 color: #757575;
 }
 
@@ -87,21 +78,20 @@ color: #757575;
 font-style: normal;
 font-weight: 900;
 font-size: 44px;
-line-height: 60px;
-
+line-height: 1.4;
 letter-spacing: 0.06em;
 text-transform: uppercase;
-
+text-align: left;
 color: #FFFFFF;
 }
 
 .button1 {
     color: #FFFFFF;
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-family: Roboto;
 font-style: normal;
 font-weight: bold;
 font-size: 16px;
-line-height: 30px;
+line-height: 1.9;
 cursor: pointer;
 background: #2196F3;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -109,11 +99,11 @@ border-radius: 4px;
 }
 
 .button2 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height: 26px;
+line-height: 1.6;
 cursor: pointer;
 background: #F5F4FA;
 border-radius: 4px;
@@ -122,4 +112,78 @@ border-radius: 4px;
 .button2:hover,
 .button2:focus {
     background: #2196F3;
+}
+
+.main-zag {
+    font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 14px;
+line-height: 1.1;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #212121;
+}
+
+.main-par {
+    font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 1.7;
+letter-spacing: 0.03em;
+color: #757575;
+}
+
+.main-zag-2 {
+    font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 36px;
+line-height: 1.2;
+text-align: left;
+letter-spacing: 0.03em;
+color: #212121;
+}
+
+.name {
+    font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.2;
+text-align: left;
+letter-spacing: 0.03em;
+color: #212121;
+}
+
+.prof {
+    font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 1.2;
+text-align: left;
+letter-spacing: 0.03em;
+color: #757575;
+}
+
+.name2 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: #212121; 
+}
+
+.prof2 {
+    font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 1.9;
+letter-spacing: 0.03em;
+color: #757575;
 }
