--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,6 @@ color: #FFFFFF;
 }
 
 .link-inline {
-    font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
@@ -52,7 +51,6 @@ color: #212121;
 }
 
 .link-inline2 {
-    font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
@@ -61,6 +59,14 @@ letter-spacing: 0.02em;
 color: #757575;
 }
 
+.link-inline3 {
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 24px;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+}
 
 
 .link-inline:hover,
@@ -73,8 +79,12 @@ color: #757575;
     color: #2196F3;
 }
 
+.link-inline3:hover,
+.link-inline3:focus {
+    color: #2196F3;
+}
+
 .main-logo {
-    font-family: Roboto;
 font-style: normal;
 font-weight: 900;
 font-size: 44px;
@@ -87,7 +97,6 @@ color: #FFFFFF;
 
 .button1 {
     color: #FFFFFF;
-font-family: Roboto;
 font-style: normal;
 font-weight: bold;
 font-size: 16px;
@@ -99,7 +108,6 @@ border-radius: 4px;
 }
 
 .button2 {
-    font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
@@ -115,7 +123,6 @@ border-radius: 4px;
 }
 
 .main-zag {
-    font-family: Roboto;
 font-style: normal;
 font-weight: bold;
 font-size: 14px;
@@ -126,7 +133,6 @@ color: #212121;
 }
 
 .main-par {
-    font-family: Roboto;
 font-style: normal;
 font-weight: normal;
 font-size: 14px;
@@ -136,7 +142,6 @@ color: #757575;
 }
 
 .main-zag-2 {
-    font-family: Roboto;
 font-style: normal;
 font-weight: bold;
 font-size: 36px;
@@ -147,7 +152,6 @@ color: #212121;
 }
 
 .name {
-    font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
@@ -158,7 +162,6 @@ color: #212121;
 }
 
 .prof {
-    font-family: Roboto;
 font-style: normal;
 font-weight: normal;
 font-size: 16px;
@@ -169,17 +172,15 @@ color: #757575;
 }
 
 .name2 {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    color: #212121; 
+font-style: normal;
+font-weight: bold;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+color: #212121; 
 }
 
 .prof2 {
-    font-family: Roboto;
 font-style: normal;
 font-weight: normal;
 font-size: 16px;
